# libmedia

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  init.sh  main.cpp
graphics/: graphics.c  graphics.h
include/media/: app.hpp  assets.h  graphics.hpp  log.hpp  media.h  media.hpp  pointer.hpp  sensor.hpp
include/media/desktop/: desktop.h  platform.h
media/: android.c  common.c  common.h  desktop.c  event.h  input.h  log.h  macro.h  media.h  motion.h  render.h  sensor.h
media/android/: android.c  android.h  assets.c  graphics.c  platform.h
media/common/: common.c  common.h
media/desktop/: assets.c  desktop.c  graphics.c
resources/: index.html  media.js  style.css
source/: app.cpp  app.hpp  desktop.cpp  event.cpp  graphics.cpp  graphics.hpp  main.c  main.cpp  pointer.hpp
source/common/: common.c
source/desktop/: app.cpp  app.hpp  assets.c  desktop.c  event.hpp  graphics.c  graphics.cpp  graphics.hpp  main.cpp  pointer.cpp  pointer.hpp
source/web/: app.cpp  app.hpp  event.cpp  graphics.cpp  graphics.hpp  main.cpp  pointer.cpp  pointer.hpp
source/web/js/: canvas.cpp  canvas.hpp  handler.cpp  handler.hpp  utility.cpp  utility.hpp
